--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>movement-ignition-web3</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Build the future of Communities with CommunityBuild" />
+    <meta name="author" content="Arun" />
 
-    <meta property="og:title" content="movement-ignition-web3" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="CommunityBuild.xyz - The Future of Communities" />
+    <meta property="og:description" content="The Future of Communities" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://pbs.twimg.com/profile_images/1934830159355670528/XMDSyDNH_400x400.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@community_buidl" />
+    <meta name="twitter:image" content="https://pbs.twimg.com/profile_images/1934830159355670528/XMDSyDNH_400x400.jpg" />
   </head>
 
   <body>
